--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,7 +25,7 @@ permissions:
   mod: mod
 
   # What is the Senior Mod group name?
-  senior_mod: seniormod
+  admin: admin
 
   # What is the Developer group name?
   developer: developer
