--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.novelmc</groupId>
-    <artifactId>Coomerce</artifactId>
-    <version>6.9.0-OFFICIAL</version>
+    <artifactId>Converse</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
